Prepare azure-search-documents for October 2021 Patch Release